Complete exercise 06 Foundations CSS

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -10,14 +10,13 @@ body{
 
 .small-para {
   font-size: 14px;
-  font-weight: 800;
 }
 
 .para {
   font-size: 22px;
 }
 
-.confirm {
+#confirm-button {
   background: green;
   color: white;
   font-weight: bold;
@@ -35,7 +34,7 @@ body{
   font-size: 14px;
 }
 
-div.text {
+div .text .child {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
