--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,24 +7,27 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
-  padding: 1px;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
-  margin: 8px;
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-size: 16px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
-  margin: 8px;
+  margin-bottom: 8px;
   padding: 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
-  margin: 8px;
   text-align: center;
+  padding: 8px;
 }
 
 button {
