--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,55 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+li{
+  list-style: none;
+}
+
+a{
+  color: #666;
+  text-decoration: none;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  
+
+}
+
+.header .left-links,
+.header .right-links{
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 16px;
+}
+
+.content{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer{
+  background: #eee;
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.footer .left-links,
+.footer .right-links{
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 16px;
+}
